# rusty_vault

./: .gitignore  Cargo.toml  LICENSE  README.md  self-closing-page.html
src/: kubernetes.rs  lib.rs  oidc.rs  secure_value.rs
tests/: vault_live.rs
