[package]
name = "rusty_vault"
version = "0.2.1"
edition = "2024"

[features]
default = ["oidc_callback"]
oidc_callback = ["dep:axum", "dep:latch", "dep:open"]

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots",]}
serde_json = "1.0.149"

tokio = { version = "1.52.2", features = ['full'] }
axum = { version = "0.8.9", optional = true }
latch = { version = "0.1.1", optional = true }
log = "0.4.29"
open = { version = "5.3.4", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
dirs = "6.0.0"
secrecy = { version = "0.10.3", features = ["serde"] }
once_cell = "1.21.4"

[dev-dependencies]
env_logger = "0.11.10"
